src/test/deca/syntax/invalid/created/parser/WithoutObjectExpressions/1_brace.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//  1_brace.deca:6:1: missing '}' at '<EOF>'
{